kubernetes/4_rest-proxy/43_rest-proxy-statefulset.yml
---
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: rp
  labels:
    category: rest-proxy
spec: 
  serviceName: rp-svc
  replicas: 1
  template:
    metadata:
      labels:
        app: rp
    spec: 
      containers:
      - name: rest-proxy
        imagePullPolicy: Always
        image: mbe1224/confluent-rest-proxy
        resources:
          requests:
            memory: "1Gi"
            cpu: 500m        
        ports:
        - containerPort: 8082
          name: server
        readinessProbe:
          tcpSocket:
            port: 8082
          initialDelaySeconds: 10        
          timeoutSeconds: 1
        livenessProbe:
          tcpSocket:
            port: 8082
          initialDelaySeconds: 10        
          timeoutSeconds: 1
