kubernetes/4_rest-proxy/rest-proxy-deployment.yml
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: rp
  namespace: confluent-platform  
  labels:
    category: rest-proxy
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: rp
    spec:
      terminationGracePeriodSeconds: 300
      containers:
      - name: confluent-rest-proxy
        imagePullPolicy: Always
        image: mbe1224/confluent-rest-proxy
        resources:
          requests:
            memory: "1Gi"
            cpu: 500m
        ports:
        - containerPort: 8082
          name: server
