kubernetes/4_rest-proxy/rest-proxy-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: rp-svc
  namespace: confluent-platform  
  labels:
    app: rp-svc
    category: rest-proxy    
spec:
  ports:
  - name: server
    protocol: TCP  
    port: 8082
  selector:
    app: rp
